# google-codejam

./: .gitignore  CMakeLists.txt  README.md  meson.build
2016/: C-large-answer.out  CMakeLists.txt  jamcoin.cpp  sheep.cpp
2016/Distributed-Round1/: CMakeLists.txt
2017/Round1a/: A-large-practice.out  CMakeLists.txt
2017/Round1b/: A-small-attempt0.in  B-large-practice.out  B-small-attempt1.out  B-small-attempt2.out  B-small-attempt3.out  CMakeLists.txt
2017/Round1c/: A-small-attempt0.in  A.cpp  B.cpp  C.cpp
2017/Round2/: A.cpp  B.cpp  C.cpp  CMakeLists.txt
2017/RoundQ/: A.cpp  B.cpp  C-small-1-attempt2.out  C.cpp  CMakeLists.txt
2018/PracticeSession/: A.cpp  B.cpp  CMakeLists.txt
2018/Qualification/: A  B  C  C.cpp  D  D-test.in
2018/Round1b/: A-test.in  A.cpp
2018/Round2/: A.cpp  B-test.in  C-test.in  C.cpp  CMakeLists.txt
2018/RoundQ/: CMakeLists.txt  D.cpp  testing_tool.py
2019/: meson.build
2019/Qualification/: A  A.cpp  B  B.cpp  C  C-test.cpp  C.cpp  C.h  D  D.cpp  meson.build
2019/Round1C/: A-test.cpp  A.cpp  B-test.cpp  C-test.cpp  meson.build
2019/Round3/: A-test.cpp  A.cpp  B-test.cpp  B.cpp  C-test.cpp  D-test.cpp  meson.build
2020/: meson.build
2020/Qualification/: A-test.cpp  A.cpp  B-test.cpp  B.cpp  C-test.cpp  C.cpp  D.cpp  meson.build
2020/Round1B/: A-test.cpp  A.cpp  B-test.cpp  C-test.cpp  C.cpp  D-test.cpp  D.cpp  meson.build
2020/Round1C/: A-test.cpp  A.cpp  B-test.cpp  B.cpp  C-test.cpp  C.cpp
2021/Qualification/: A-test.cpp  A.cpp  B-test.cpp  C-test.cpp  D-test.cpp
archive/2016/: C-small-answer.out  aggrcows.cpp  fractiles.cpp  pancake.cpp  powerset.cpp
archive/2016/Distributed-Round1/: A.cpp
archive/2017/Round1a/: A-large-practice.in  A-small-practice.out  A.cpp  B.cpp  C-small-attempt0.in  C-small-attempt0.out  C-small-practice.out  C-small-practice.out-2  C.cpp
archive/2017/Round1b/: A-large.out  A-small-attempt0.out  A-small-attempt1.out  A.cpp  B-small-attempt0.in  B-small-attempt0.out  B-small-attempt1.in  B-small-attempt2.in  B-small-attempt3.in  B-small-practice.out  B.cpp  C-large-practice.out  C-small-practice.out  C.cpp
archive/2017/Round1c/: A-large-practice.out  A-small-attempt0.out  A-small-practice.out  C-small-practice-1.out  C-small-practice-2.out
archive/2017/Round2/: C-small-practice.out  D.cpp
archive/2017/RoundQ/: C-small-2-attempt0.out
archive/2018/Qualification/: A.cpp  B-test.in  B.cpp
archive/2018/Round1b/: B.cpp
archive/2018/Round2/: A-test.in  B.cpp  C.cpp  D.cpp
include/: pstreams.h  testing.h  utilities.h
template/: A-test.cpp  B-test.cpp  C-test.cpp  C.cpp  D-test.cpp  meson.build
